# tcp-dummy-services

./: .gitignore  Dockerfile  Dockerfile.gcr  README.DOCKERHUB.md  README.md  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: general-cicd.yml
docker/: Dockerfile
locust/: locustfile.py
locust/common/: __init__.py  things_loader.py
postman_collections/: tcp_dummy_services-HTTP.postman_collection.json
src/: tcp.sh
src/tcp_dummy_services/: __main__.py
src/tcp_dummy_services/api/v1/stuff/: api.py  router.py
src/tcp_dummy_services/api/v1/stuff/services/: __init__.py  remote_service.py  write_service.py
src/tcp_dummy_services/api/v1/things/: api.py  router.py
src/tcp_dummy_services/api/v1/things/services/: __init__.py  read_service.py  write_service.py
src/tcp_dummy_services/core/: __init__.py  logging.py  settings.py
src/tcp_dummy_services/core/ws/: __init__.py  connection_manager.py
src/tcp_dummy_services/domain/entities/: __init__.py  response.py  thing.py
src/tcp_dummy_services/domain/exceptions/: __init__.py  data_decoding_exception.py  thing_already_exists_exception.py  thing_not_found_exception.py
src/tcp_dummy_services/http/: main.py
src/tcp_dummy_services/infrastructure/repositories/dummy/: __init__.py  thing_repository_impl.py
src/tcp_dummy_services/repository/: utils.py
src/tcp_dummy_services/repository/interfaces/: __init__.py  thing_repository.py
src/tcp_dummy_services/tcp/: __main__.py
src/tcp_dummy_services/ws/: main.py  ws_api.py
