[tool.poetry]
name = "tcp-dummy-services"
version = "0.1.0"
description = "Dummy services to test cloud providers"
authors = ["Lino Figueroa <impalah@gmail.com>"]
readme = "README.md"
packages = [{include = "tcp_dummy_services", from = "src"}]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.109.1"
uvicorn = {extras = ["standard"], version = ">=0.27.0.post1"}
colorlog = ">=6.8.2"
py-automapper = ">=1.2.3"
svix-ksuid = ">=0.6.2"
aiohttp = "^3.9.3"
locust = "^2.23.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-mock = ">=3.12.0"
black = ">=24.1.1"
mypy = ">=1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
